--- a/scss/partials/_variables.scss
+++ b/scss/partials/_variables.scss
@@ -1,5 +1,6 @@
 $mobile-width: 540px;
-$text-font: 'open sans', sans-serif;
+$heading-font: 'Playfair Display', serif;
+$text-font: 'Lato', sans-serif;
 
 $colors: (
 	black: #0a0a0a,
