--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,2 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400&family=Playfair+Display:ital,wght@0,400;1,700&display=swap');
+
 @import 'partials/variables';
+@import 'partials/page';
+@import 'partials/nav';
 @import 'partials/tabmenu';
+
