--- a/scss/partials/_page.scss
+++ b/scss/partials/_page.scss
@@ -5,12 +5,8 @@ body {
 }
 
 header {
-	width: 85%;
-}
+	width: 85%;}
 
-.carousel-item > img {
-	height: 290px;
-}
 
 h1 {
   font-family: $heading-font;
