--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,5 +3,6 @@
 @import 'partials/variables';
 @import 'partials/page';
 @import 'partials/nav';
+@import 'partials/carousel';
 @import 'partials/tabmenu';
 
