--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1,10 +1,23 @@
-@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400&family=Playfair+Display:ital,wght@0,400;1,700&display=swap");
+/*!
+ * Bootstrap v5.0.2 (https://getbootstrap.com/)
+ * Copyright 2011-2021 The Bootstrap Authors
+ * Copyright 2011-2021 Twitter, Inc.
+ * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
+ */
 :root {
-  --bs-black: #0a0a0a;
-  --bs-gray: #c7c7c7;
-  --bs-gray-light: #efefef;
-  --bs-gray-dark: #767676;
-  --bs-red: #e92569;
+  --bs-blue: #0d6efd;
+  --bs-indigo: #6610f2;
+  --bs-purple: #6f42c1;
+  --bs-pink: #d63384;
+  --bs-red: #dc3545;
+  --bs-orange: #fd7e14;
+  --bs-yellow: #ffc107;
+  --bs-green: #198754;
+  --bs-teal: #20c997;
+  --bs-cyan: #0dcaf0;
+  --bs-white: #fff;
+  --bs-gray: #6c757d;
+  --bs-gray-dark: #343a40;
   --bs-primary: #0d6efd;
   --bs-secondary: #6c757d;
   --bs-success: #198754;
@@ -5036,9 +5049,9 @@ fieldset:disabled .btn {
   width: 100%;
   padding: 1rem 1.25rem;
   font-size: 1rem;
-  color: #e92569;
+  color: #212529;
   text-align: left;
-  background-color: white;
+  background-color: #fff;
   border: 0;
   border-radius: 0;
   overflow-anchor: none;
@@ -5056,14 +5069,14 @@ fieldset:disabled .btn {
 }
 
 .accordion-button:not(.collapsed) {
-  color: #e92569;
-  background-color: white;
-  -webkit-box-shadow: inset 0 -1px 0 white;
-          box-shadow: inset 0 -1px 0 white;
+  color: #0c63e4;
+  background-color: #e7f1ff;
+  -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.125);
+          box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.125);
 }
 
 .accordion-button:not(.collapsed)::after {
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23e92569'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%230c63e4'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
   -webkit-transform: rotate(-180deg);
           transform: rotate(-180deg);
 }
@@ -5071,13 +5084,13 @@ fieldset:disabled .btn {
 .accordion-button::after {
   -ms-flex-negative: 0;
       flex-shrink: 0;
-  width: 0;
-  height: 0;
+  width: 1.25rem;
+  height: 1.25rem;
   margin-left: auto;
   content: "";
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23212529'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
   background-repeat: no-repeat;
-  background-size: 0;
+  background-size: 1.25rem;
   -webkit-transition: -webkit-transform 0.2s ease-in-out;
   transition: -webkit-transform 0.2s ease-in-out;
   transition: transform 0.2s ease-in-out;
@@ -5108,8 +5121,8 @@ fieldset:disabled .btn {
 }
 
 .accordion-item {
-  background-color: rgba(255, 255, 255, 0.6);
-  border: 1px solid white;
+  background-color: #fff;
+  border: 1px solid rgba(0, 0, 0, 0.125);
 }
 
 .accordion-item:first-of-type {
@@ -11484,98 +11497,4 @@ fieldset:disabled .btn {
     display: none !important;
   }
 }
-
-body {
-  background-color: #efefef;
-  font-family: "Lato", sans-serif;
-  color: #767676;
-}
-
-header {
-  width: 85%;
-}
-
-h1, .h1 {
-  font-family: "Playfair Display", serif;
-  color: #e92569;
-}
-
-.navbar-light .navbar-brand {
-  font-family: "Playfair Display", serif;
-  font-size: 20px;
-  font-style: italic;
-  font-weight: bold;
-  color: #e92569;
-}
-
-.navbar-toggler {
-  border: none;
-}
-
-.nav-item:hover,
-.navbar-light .navbar-nav .nav-link.active {
-  background-color: white;
-  color: #767676;
-}
-
-form {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-form input {
-  -ms-flex-preferred-size: 90%;
-      flex-basis: 90%;
-}
-
-form .btn {
-  background-color: #e92569;
-  border-radius: 0;
-  border: none;
-}
-
-.carousel-indicators .active, .carousel-indicators .hover {
-  background-color: #e92569 !important;
-}
-
-.carousel-indicators [data-bs-target] {
-  height: 30px !important;
-  background-color: white;
-  opacity: 1;
-}
-
-.carousel-item img {
-  -o-object-fit: cover;
-     object-fit: cover;
-  height: 270px;
-}
-
-.nav-tabs {
-  display: none;
-}
-
-@media screen and (min-width: 768px) {
-  .nav-tabs {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-  }
-  .accordion-item .collapse {
-    display: block;
-  }
-  .accordion-header {
-    display: none;
-  }
-  .collapse {
-    display: block;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .tab-content > .tab-pane {
-    display: block !important;
-    opacity: 1;
-  }
-}
-/*# sourceMappingURL=style.css.map */
+/*# sourceMappingURL=bootstrap.css.map */
