--- a/scss/style.scss
+++ b/scss/style.scss
@@ -26,20 +26,20 @@
 @import "../bootstrap-scss/navbar";
 @import "../bootstrap-scss/card";
 @import "../bootstrap-scss/accordion";
-@import "../bootstrap-scss/breadcrumb";
+// @import "../bootstrap-scss/breadcrumb";
 @import "../bootstrap-scss/pagination";
-@import "../bootstrap-scss/badge";
-@import "../bootstrap-scss/alert";
-@import "../bootstrap-scss/progress";
+// @import "../bootstrap-scss/badge";
+// @import "../bootstrap-scss/alert";
+// @import "../bootstrap-scss/progress";
 @import "../bootstrap-scss/list-group";
 @import "../bootstrap-scss/close";
 @import "../bootstrap-scss/toasts";
 @import "../bootstrap-scss/modal";
 @import "../bootstrap-scss/tooltip";
-@import "../bootstrap-scss/popover";
+// @import "../bootstrap-scss/popover";
 @import "../bootstrap-scss/carousel";
-@import "../bootstrap-scss/spinners";
-@import "../bootstrap-scss/offcanvas";
+// @import "../bootstrap-scss/spinners";
+// @import "../bootstrap-scss/offcanvas";
 
 // Helpers
 @import "../bootstrap-scss/helpers";
@@ -53,3 +53,4 @@
 @import 'partials/nav';
 @import 'partials/carousel';
 @import 'partials/tabmenu';
+@import 'partials/footer';
