--- a/scss/partials/_carousel.scss
+++ b/scss/partials/_carousel.scss
@@ -16,3 +16,12 @@
     height:290px;
   }
 }
+
+@media screen and (min-width: $mobile-width) {
+  .carousel-item{
+    img{
+      object-fit: cover;
+      height:470px;
+    }
+  }
+}
