--- a/scss/partials/_custom.scss
+++ b/scss/partials/_custom.scss
@@ -21,3 +21,6 @@ $accordion-border-color:  white;
 $accordion-button-active-bg: white;
 $accordion-button-active-color: getColor(red);
 $accordion-icon-width: 0;
+
+$nav-link-color: getColor(red);
+$nav-link-hover-color: getColor(gray-dark);      
