--- a/scss/partials/_page.scss
+++ b/scss/partials/_page.scss
@@ -1,5 +1,5 @@
 body {
-	background-color: getColor(gray-light);
+	background-color: getColor(gray);
 	font-family: $text-font;
 	color: getColor(gray-dark);
 }
