--- a/scss/partials/_footer.scss
+++ b/scss/partials/_footer.scss
@@ -1,7 +1,7 @@
 footer{
   margin-top:30px !important;
   background-color: white;
-  padding: 45px;
+  padding: 25px 45px 15px 45px;
 
   div:first-of-type{
     font-size: 22px;
