--- a/scss/partials/_page.scss
+++ b/scss/partials/_page.scss
@@ -5,11 +5,12 @@ body {
 }
 
 header {
-	width: 85%;
+	background-color: getColor(gray-light);
+	width: 100%;
+	margin-top: -10px;
 }
 
 h1 {
 	font-family: $heading-font;
 	color: getColor(red);
 }
-
