--- a/scss/partials/_custom.scss
+++ b/scss/partials/_custom.scss
@@ -36,3 +36,6 @@ $card-border-radius: 1.25rem;
 
 $form-check-input-width:   2em;
 $input-border-width: 0;
+
+$form-check-input-bg: getColor(red);
+$form-check-input-border: none;
