--- a/scss/partials/_news.scss
+++ b/scss/partials/_news.scss
@@ -12,6 +12,7 @@ main nav{
     width: 100%;
     border-right: 30px solid getColor(gray-dark);
     background-color:getColor(red);
+    color: white;
   }
 
 }
