--- a/scss/partials/_tabmenu.scss
+++ b/scss/partials/_tabmenu.scss
@@ -47,6 +47,7 @@
 			grid-area: links;
 			padding: 10px;
 			color: black;
+			font-size: 1.4rem;
 		}
 	}
 }
@@ -81,6 +82,7 @@
 			grid-area: links;
 			padding: 10px;
 			color: black;
+			font-size: 1.4rem;
 		}
 	}
 }
