--- a/css/style.css
+++ b/css/style.css
@@ -4515,8 +4515,8 @@ fieldset:disabled .btn {
 .navbar-toggler:focus {
   text-decoration: none;
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.25rem;
-          box-shadow: 0 0 0 0.25rem;
+  -webkit-box-shadow: 0 0 0 0;
+          box-shadow: 0 0 0 0;
 }
 
 .navbar-toggler-icon {
@@ -11063,6 +11063,7 @@ form .btn {
     grid-area: links;
     padding: 10px;
     color: black;
+    font-size: 1.4rem;
   }
 }
 
@@ -11098,11 +11099,12 @@ form .btn {
     grid-area: links;
     padding: 10px;
     color: black;
+    font-size: 1.4rem;
   }
 }
 
 footer {
-  margin-top: 30px !important;
+  margin-top: 50px !important;
   background-color: white;
   padding: 25px 45px 15px 45px;
 }
@@ -11156,6 +11158,7 @@ main nav {
   width: 100%;
   border-right: 30px solid #767676;
   background-color: #e92569;
+  color: white;
 }
 
 .card {
@@ -11191,7 +11194,7 @@ main nav {
   #website-extra {
     display: inline;
   }
-  main > div > div:first-of-type {
+  main > div > .col {
     margin: 50px;
   }
 }
