--- a/scss/partials/_custom.scss
+++ b/scss/partials/_custom.scss
@@ -16,6 +16,8 @@ $colors: (
 
 $gray-100: getColor(gray-light);
 
+$navbar-toggler-focus-width: 0;
+
 $accordion-button-color: getColor(red);
 $accordion-bg: rgba(255, 255, 255, 0.6);
 $accordion-button-bg: white;
