--- a/scss/partials/_tabmenu.scss
+++ b/scss/partials/_tabmenu.scss
@@ -24,14 +24,16 @@
 	}
 
 	.accordion-body {
+		background-color:white !important;
 		padding: 40px;
 		display: grid;
 		grid-template-columns: auto;
 		grid-template-rows: 2;
 		grid-template-areas:
 			'image text text text text text text'
-			'image links . . . . .';
+			'image links . . . . .';		
 		
+
 		grid-gap: 1rem;
 
 		p {
@@ -56,6 +58,10 @@
 	.tab-content > .tab-pane {
 		display: block !important;
 		opacity: 1;
+	}
+
+	.accordion-button:not(.collapsed){
+		border-bottom: 2px solid getColor(red);
 	}
 
 	.accordion-body {
